# EDGE

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: engine.h
src/: main.cpp
tests/: CMakeLists.txt  example_test.cpp
